[tool.poetry]
name = "homework-web-11"
version = "0.1.0"
description = ""
authors = ["MaksymBratsiun <bratsyun_m@ukr.net>"]
readme = "README.md"
packages = [{include = "homework_web_11"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.95.0"
uvicorn = {extras = ["standart"], version = "^0.21.1"}
sqlalchemy = "^2.0.7"
psycopg2 = "^2.9.5"
alembic = "^1.10.2"
pydantic = {extras = ["email"], version = "^1.10.7"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
